- Added additional sorting options (artist, genre, decade) for Guitar Hero
  games. This data is gathered from the ScoreHero Wiki page for that song.
  If data is missing, you can update the song's wiki page to correct it.
- The checkbox to remember your password is now correctly checked if it was
  previously stored and unchecking the box will remove the stored password.

Version 0.3.0
-------------
- GHWT, GHM, and GHSH are at long last supported.
- May possibly have fixed NullPointerException related to
  jshm.Score.equals(Score.java:590). Hard to test this though.
- The last game/instrument/difficulty you viewed is now saved and
  restored when you restart the program.
- Menu items that used Control for the accelerator keystroke should now
  use Command on Macs (though I can't really test this).
- Added more options to the right-click menu when browsing scores.
- Fixed bug that made the go to song feature stop working after opening
  the score upload wizard.
- Added a toolbar for quicker access to some of the menu commands.
- Added more song sorting options. Guitar Hero games can only be sorted
  by ScoreHero's sorting and title due to no apparant song data feed.
  Rock Band has the same in-game sorting options thanks to pksage's
  master song list. There are some discrepencies between his list
  and ScoreHero however. Those songs will show up in an <UNKNOWN> tier.
  The sorting can be selected from File -> Sort Songs by.
- There is now an option to hide songs and tiers that don't have any
  scores. You can still insert a score via the editor for a hidden song,
  which will cause it to appear in the list. This can be toggled in the
  File menu.
- Songs now have an icon to indicate where they are from (i.e. RB1, RB2,
  DLC, AC/DC).
- Corrected Classic Rock Track Pack tier to show up under RB1 for PS2.

Version 0.2.8
-------------
- Added more performance improvements. The "Downloaded Songs" tier in