@@ -52,7 +52,7 @@ public class WtScore extends Score {
 	    		session.createCriteria(SongOrder.class)
 	    			.add(Restrictions.eq("gameTitle", s.getGame().title))
 	    			.add(Restrictions.eq("platform", s.getGame().platform))
-	    			.add(Restrictions.eq("group", s.getGroup()))
+	    			.add(Restrictions.eq("group", s.getGroup().getEffectiveSongOrderGroup()))
 	    			.add(Restrictions.eq("song", s.getSong()))
 	    		.uniqueResult()
 	    	);
