@@ -14,6 +14,8 @@ Version 0.3.1
   If data is missing, you can update the song's wiki page to correct it.
 - The checkbox to remember your password is now correctly checked if it was
   previously stored and unchecking the box will remove the stored password.
+- Fixed issue with songs/scores not showing up after the first tier for
+  WT Drums.
 
 Version 0.3.0
 -------------
